@@ -109,4 +109,15 @@ enum _ewl_visibility
 	EWL_VISIBILITY_REALIZED = 0x2
 };
 
+
+typedef enum _ewl_position Ewl_Position;
+
+enum _ewl_position
+{
+	EWL_POSITION_LEFT,
+	EWL_POSITION_RIGHT,
+	EWL_POSITION_TOP,
+	EWL_POSITION_BOTTOM
+};
+
 #endif /* __EWL_ENUMS_H__ */
